# picture-tool

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion_checklist.md
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/assets/: model_map.json
core/assets/presets/: default.json
core/src/: lib.rs  model_map.rs
core/src/exif_frame/: layout.rs  logo.rs  mod.rs  preset.rs  text.rs
core/tests/: exif_frame_v2_integration.rs
docs/superpowers/plans/: 2026-03-22-picture-tool-gui.md  2026-03-23-gui-improvements-v2.md  2026-03-23-gui-improvements.md  2026-03-24-full-codebase-review-fixes.md  2026-03-25-exif-frame.md  2026-03-29-exif-frame-v2.md
docs/superpowers/specs/: 2026-03-22-gui-improvements-design.md  2026-03-22-picture-tool-gui-design.md  2026-03-23-gui-improvements-v2-design.md  2026-03-25-exif-frame-design.md  2026-03-29-exif-frame-v2-design.md
gui/: Cargo.toml  tauri.conf.json
gui-frontend/: index.html  package-lock.json  package.json  tsconfig.json
gui-frontend/src/: App.svelte  app.css
gui-frontend/src/lib/: ExifFrameSettings.svelte  FolderTree.svelte  ImagePreview.svelte  ProgressOverlay.svelte  SelectionList.svelte  SettingsPanel.svelte  ThumbnailGrid.svelte  api.ts  types.ts
gui/capabilities/: default.json
gui/icons/: icon.icns
gui/src/: commands.rs  main.rs  state.rs  types.rs
src/: main.rs
