[package]
name = "picture-tool-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
picture-tool-core = { path = "../core" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1", features = ["rt"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
